docs: copyedit moredata, blocksvars, and search sections for clarity
Apply Strunk's Elements of Style across remaining DQL tutorial sections:
schema/10 links to the next module, moredata/1-2 tightens dataset
introduction, blocksvars/1-13 fixes uid plurals and garbled prose,
search/1-8 uses active voice and parallel construction throughout.

--- a/content/blocksvars/1.md
+++ b/content/blocksvars/1.md
@@ -8,25 +8,22 @@ course = 5
 courseName = "Var Blocks"
 +++
 
-{{% notice "note" %}} From now on, to run the queries, you'll need to have
-loaded the million triple movie dataset. Run `make seed-movie-dataset` from the
-tour repository root to do so. On Windows (or if you don't have `make` installed),
-use `docker exec tour-seed make seed-movie-dataset` instead. {{% /notice %}}
+{{% notice "note" %}} The remaining lessons query the million-triple movie
+dataset. If you haven't loaded it yet, run `make seed-movie-dataset` from the
+tour repository root. On Windows (or without `make`), use
+`docker exec tour-seed make seed-movie-dataset` instead. {{% /notice %}}
 
-Queries can be issued as multiples.
+You can issue multiple queries in a single request.
 
-For queries labeled `q1, ..., qn` issued as a multiple query block, the JSON
-result will contain labeled answer blocks `q1, ..., qn` for each query.
+For queries labeled `q1, ..., qn`, the JSON result contains a corresponding
+answer block for each query. If you label a block with `var`, Dgraph returns no
+results for that block.
 
-If a block is labeled with `var`, no results are returned for that query.
+Multiple queries in a single request run independently.
 
-Queries issued in this way are independent.
+The visualization here shows the union of the two queries based on `uid`, but
+the JSON result contains each query's independent answer.
 
-The visualization here finds the union in the two queries based on `uid`, but
-the JSON result contains the independent answer for each query.
-
-So, In this case, we are visualizing the union between two distinct queries.
-
-Query variables are one of the most powerful features of DQL. Query variables
-allow the answers from one block to be used in another, joining the two queries.
-You'll learn about query variables in the following pages.
+Query variables are among the most powerful features of DQL. They let one block's
+results feed into another, joining the two queries. The next several pages
+explore how they work.
