--- a/content/blocksvars/11.md
+++ b/content/blocksvars/11.md
@@ -25,7 +25,7 @@ If you need some hints try: {{% expandable %}} To solve this, you'll need to
 
 {{% /expandable %}}
 
-Spoiler alert: {{% expandable %}}
+Solution: {{% expandable %}}
 
 ```
 {
