--- a/content/blocksvars/12.md
+++ b/content/blocksvars/12.md
@@ -27,5 +27,5 @@ The result is the grouped edges and the value variables for the aggregations.
 
 In this case the value variable is a map from genres to values.
 
-Often, it's necessary to use `groupby` with another query to obtain values other
-than aggregations.
+To obtain values beyond the aggregations, combine `groupby` with a second query
+block.
