--- a/content/blocksvars/13.md
+++ b/content/blocksvars/13.md
@@ -9,6 +9,7 @@ courseName = "Var Blocks"
 completed = 1
 +++
 
-You've finished this lesson.
+You have finished this lesson.
 
-Next up, string and geo searching. Or use the index to go to another topic.
+Continue to [Search](/search/1) for string and geo searching, or use the index
+to jump to another topic.
