--- a/content/blocksvars/3.md
+++ b/content/blocksvars/3.md
@@ -11,9 +11,8 @@ courseName = "Var Blocks"
 Query variables in a child block allow the query to carry answers matched at one
 level down to the children to filter against.
 
-For example, take of the set of actors in all Jane Campion films; our challenge
-is to find which pairs in that set have acted together on a film not directed by
-Jane Campion.
+For example, consider the set of actors in all Jane Campion films. Which pairs
+from that set have acted together in a film not directed by Jane Campion?
 
 The query here uses the sets of all Jane Campion's films `JC_films` and all
 actors in any Jane Campion film `JC_actors` in child blocks.
@@ -21,8 +20,8 @@ actors in any Jane Campion film `JC_actors` in child blocks.
 The `@cascade` directive ensures answers match all parts of the query -
 otherwise, actors who had no matching co-actors could be returned.
 
-The query returns the trivial matches of actors and themselves as well as other
-coactors.
+The query returns both trivial self-matches (an actor paired with themselves) and
+genuine co-actor pairs.
 
 The same query could have been written using variables that span multiple
 queries, but the graph traversal would be the same.
