--- a/content/blocksvars/7.md
+++ b/content/blocksvars/7.md
@@ -8,20 +8,19 @@ course = 5
 courseName = "Var Blocks"
 +++
 
-We've just looked at variables that stored `uid` results from query blocks.
-Value variables store the values against which they match.
+The previous pages covered variables that store UID results. Value variables
+store the matched values instead.
 
-Value variables work differently to query variables. Value variables are context
-dependent - in fact, they are a map from UID to value and we can exploit this
-when reading and filtering value variables. The value from a value variable is
-extracted with `val(<variable-name>)`.
+Value variables work differently from query variables. Each value variable is a
+map from UID to value; you can exploit this map when reading and filtering.
+Extract the value with `val(<variable-name>)`.
 
-At the point of definition, because the context is within the appropriate UID,
-value variables act like the corresponding value. In the enclosing block, value
-variables are the UID to value map and must be aggregated.
+Within the defining block, the context already identifies the appropriate UID,
+so a value variable acts like the corresponding value. In the enclosing block,
+the variable represents the full UID-to-value map and must be aggregated.
 
-Aggregations over value variables aren't dependent on an index - there's no need
-for indexing, the values have already been found in the query.
+Aggregations over value variables operate independently of any index -- the query
+has already retrieved the values.
 
 `min` and `max` can be applied to `int`, `float`, `string`, `bool`, and `date`
 types.
