--- a/content/moredata/1.md
+++ b/content/moredata/1.md
@@ -9,41 +9,36 @@ courseName = "More Data"
 endpoint = "/alter"
 +++
 
-Ok, we are off to a start with Dgraph and DQL. Let's move it up a few notches.
-
-Dgraph can also do query aggregation, geo-queries, string querying and more. But
-for all that let's move from the small datasets we started with and try out
-something bigger, much bigger.
+Dgraph supports query aggregation, geo-queries, string querying, and more. To
+explore these features we need a larger dataset.
 
 ### Load the movie dataset
 
-In a terminal, navigate to the root directory where you checked out this tour and run:
+In a terminal, navigate to the tour's root directory and run:
 
 ```
 make seed-movie-dataset
 ```
 
-On Windows (or if you don't have `make` installed), use Docker instead:
+On Windows (or without `make`), use Docker instead:
 
 ```
 docker exec tour-seed make seed-movie-dataset
 ```
 
-This loads a dataset of about one million triples containing movies, directors,
-and actors into your local Dgraph instance. Dgraph reports back exactly how many
-triples were loaded and how long it took.
+This loads about one million triples — movies, directors, and actors — into your
+local Dgraph instance. Dgraph reports exactly how many triples it loaded and how
+long the operation took.
 
-It's a big database of movies, but it won't trouble Dgraph. It is, however, big
-enough for us to use more complex queries.
+One million triples gives us enough data for complex queries while keeping the
+load time short.
 
-This dataset is a one million triple subset of a
-[larger dataset of movies](https://github.com/dgraph-io/dgraph-benchmarks/blob/main/data/21million.rdf.gz)
-that contains around 230000 actors and around 86000 movies. We've made a subset
-to make it quick to load, while having enough complexity to yield interesting
-results. But, because it's a subset, you might find your favorite actor isn't
-there, or that some actors are missing some of their movies.
+The dataset is a subset of a
+[larger movie collection](https://github.com/dgraph-io/dgraph-benchmarks/blob/main/data/21million.rdf.gz)
+containing around 230,000 actors and 86,000 movies. Because it is a subset,
+some actors or movies may be missing.
 
-Later in the tutorial, you might need to refer back to this page (or issue a
-[schema query](../../basic/3)) to check the indexes or schema types. Remember
-that we can't apply functions to edges that aren't indexed, and we'll learn that
-some functions require particular indexes.
+Later lessons may require you to check the indexes or schema types. You can
+always run a [schema query](../../basic/3) or refer back to this page. Functions
+at the query root require indexed predicates, and some functions require specific
+index types.
