--- a/content/moredata/2.md
+++ b/content/moredata/2.md
@@ -9,28 +9,24 @@ courseName = "More Data"
 completed = 1
 +++
 
-Dgraph queries, Schema Types and the visualization will help us understand the
-schema of the movies dataset.
+Queries, schema types, and the visualization together reveal the structure of
+the movies dataset.
 
-As you'll see in the following pages, we can view the data from a number of
-perspectives; considering for example directors, movies, genres or even
-locations as the primary starting point.
+The data supports multiple entry points: directors, movies, genres, and
+locations each work as a starting node.
 
-Let's have a look from the perspective of directors. Kathryn Bigelow directed
-the early 90's classic Point Break. We'll begin with her and learn about the
-schema.
+Start with directors. Kathryn Bigelow directed the early-90s classic *Point
+Break*. The type schema tells us that a director (a `Person` type) has a `name`
+and connects to movies through `director.film`.
 
-Checking the Type Schema tells us that directors as a "Person Type" have a
-`name` and are connected to the movies they directed via `director.film`.
-
-Extend the query a level deeper by also including
+Extend the query a level deeper by adding:
 
 ```
 director.film (first: 1) {
     name
     initial_release_date
     genre { name }
-    starring { 
+    starring {
         expand(Performance) {
             uid
             expand(_all_)
@@ -39,24 +35,23 @@ director.film (first: 1) {
  }
 ```
 
-We can see a movie has a `name` and also `genre` and `starring` edges leading to
-the genres the movie is classified in and the people in the movie.
+A movie has a `name`, plus `genre` and `starring` edges that lead to genre nodes
+and performance nodes.
 
-Investigate the `starring` edge too and you'll learn that nodes reached via that
-edge represent the performance of an actor as a particular character in the
-movie.
+Follow the `starring` edge further: each node represents a single performance —
+an actor playing a particular character in a movie.
 
-Try the same queries starting with Tom Hanks. He's both an actor and a director,
-so you'll see the links to a performance from both movie and actor.
+Try the same queries starting with Tom Hanks. He is both an actor and a
+director, so the results show performance links from both sides.
 
-Remember there's also the schema query that can be used to investigate the types
-and indexes in the schema. Just
+You can also query the full schema at any time:
 
 ```
 schema {}
 ```
 
-queries for everything about the schema
+This returns every type and index in the database.
 
-If you like, investigate more. With the lessons so far, you can find all the
-movies by particular directors, the movies by an actor or the cast of a movie.
+Explore further: with the techniques from the previous lessons you can find
+every movie by a director, every movie featuring an actor, or the full cast of
+a film.
