--- a/content/schema/10.md
+++ b/content/schema/10.md
@@ -15,5 +15,5 @@ Your local Dgraph instance and the lessons so far give you a sandbox for
 experimentation. Run queries, add data, and modify the schema until the
 material feels solid.
 
-When you are ready, continue to the next module to work with larger datasets
-and explore more of Dgraph's query language.
+When you are ready, continue to [Data and More Data](/moredata/1) to work with
+larger datasets and explore more of Dgraph's query language.
