--- a/content/search/3.md
+++ b/content/search/3.md
@@ -23,20 +23,19 @@ trigram
 
 So the trigrams of "trigram" are: **tri**, **rig**, **igr**, **gra**, and **ram**.
 
-Valid regular expressions are able to be converted to a trigram query against
-the index. Dgraph searches the trigram index for possible matches and then runs
-the full regular expression against the possibles.
+Dgraph converts valid regular expressions into trigram queries against the
+index, finds possible matches, and then runs the full regular expression against
+those candidates.
 
 Each regular expressions must match at least one trigram.
 
-It's a good idea to think carefully about regular expression queries. The more
-possible trigrams matched by a query, the more results are checked against the
-full regular expression and the less efficient the query. The reverse, however,
-is also true. The more trigrams enforced by the regular expression, the better
-use Dgraph can make of the index and the smaller the possible results set.
+Choose your regular expressions carefully. A query that matches many trigrams
+forces Dgraph to check more candidates against the full expression, slowing the
+search. Conversely, a regular expression that enforces many specific trigrams
+lets Dgraph use the index well and narrows the candidate set.
 
-Thus, writing efficient regular expressions generally means making use of long
-substrings and avoiding as much alternate choice as possible.
+Write efficient regular expressions by using long substrings and limiting
+alternation.
 
 An optional `i` may follow the final `/` to indicate case insensitive search.
 
