--- a/content/search/4.md
+++ b/content/search/4.md
@@ -8,7 +8,8 @@ course = 6
 courseName = "Search"
 +++
 
-With the `exact` index inequalities on strings can be used in filters. Try the
-query after adding the `exact` index [to the string indexes]({{< relref "search/1" >}}).
+The `exact` index lets you use inequality operators (`lt`, `le`, `gt`, `ge`) on
+strings in filters. Add the `exact` index
+[to the string indexes]({{< relref "search/1" >}}), then try the query.
 
-The `hash` index allows fast filtering for `eq` on strings.
+The `hash` index provides fast `eq` filtering on strings.
