--- a/content/search/5.md
+++ b/content/search/5.md
@@ -8,16 +8,16 @@ course = 6
 courseName = "Search"
 +++
 
-Full text search is what Google does for web pages. It's different to term
-matching because it tries to respect language, grammar and tense. For example,
-matching search term run with documents containing run, running and ran.
+Full text search works the way Google searches web pages. It differs from term
+matching by respecting language, grammar, and tense. For example, the search term
+"run" matches documents containing "run," "running," and "ran."
 
-It doesn't match terms exactly and instead makes use of
+Full text search uses two key techniques:
 
-- stemming : finding a common base word so differences in tense, plural/singular
-  or other inflection are still matched, and
-- stop words : removing words such as and, or, it and maybe that occur too often
-  to search over.
+- stemming: reducing words to a common base so that differences in tense,
+  plural/singular, or other inflection still match, and
+- stop words: discarding words such as "and," "or," "it," and "maybe" that occur
+  too often to be useful in a search.
 
 Note the difference if `alloftext` is changed to `allofterms`.
 
