--- a/content/search/6.md
+++ b/content/search/6.md
@@ -8,8 +8,8 @@ course = 6
 courseName = "Search"
 +++
 
-Full text search works only for languages for which there are stemming
-procedures and stop word lists.
+Full text search requires stemming procedures and stop word lists, so it
+supports only certain languages.
 
 Currently, Dgraph supports
 
