--- a/content/search/8.md
+++ b/content/search/8.md
@@ -11,19 +11,17 @@ completed = 1
 
 Congratulations on completing the Tour!
 
-You should now be able to load data into Dgraph and perform basic queries and
-mutations on it.
+You can now load data into Dgraph and perform basic queries and mutations.
 
 ### Where to go from here
 
 - Follow the [Tutorial](https://docs.dgraph.io/learn/) videos to reinforce
   what you have learnt.
-- More queries can be found in the
-  [Query Language](https://docs.dgraph.io/dql/) reference.
-- Go to [Clients](https://docs.dgraph.io/clients/) to see how to communicate
-  with Dgraph from your application.
-- See [Deploy](https://docs.dgraph.io/admin/) if you wish to run Dgraph in a
-  cluster.
+- Explore the [Query Language](https://docs.dgraph.io/dql/) reference for
+  additional query examples.
+- Read [Clients](https://docs.dgraph.io/clients/) to connect your application
+  to Dgraph.
+- Read [Deploy](https://docs.dgraph.io/admin/) to run Dgraph in a cluster.
 
 ### Join the community
 
