--- a/content/blocksvars/2.md
+++ b/content/blocksvars/2.md
@@ -48,11 +48,10 @@ Here's an illustration of variable scoping:
 Variables don't affect the semantics of the query at the point they are defined.
 
 Query variables are used by `uid(<variable-name>)`. Variables evaluate to all
-`uid`'s matched in the query by the block they are defined against. In
-particular, note that, variables are `uid` lists, not the graph matched by the
-block, and that the variable evaluates to all `uid`'s the block matches for the
-whole query, not the `uid`'s matched by any one branch.
+UIDs matched by the block they are defined against. Variables are UID lists, not
+the graph matched by the block, and each variable evaluates to all UIDs the
+block matches across the whole query, not the UIDs matched by any single branch.
 
 It is an error to define a variable but not use it.
 
-Let's look at the options for query variables in turn.
+The following pages cover each type of query variable.
