--- a/content/blocksvars/4.md
+++ b/content/blocksvars/4.md
@@ -8,14 +8,13 @@ course = 5
 courseName = "Var Blocks"
 +++
 
-Let's take a second to think about that last query. The variable `JC_actor`
-evaluated to all actors in any Jane Campion film. No matter where we use it,
-it's the full set.
+In the previous query, the variable `JC_actor` evaluated to all actors in any
+Jane Campion film. No matter where you use it, it contains the full set.
 
-That's the key to using Dgraph's variables correctly: understand that they are
-global in the sense that they evaluate to all nodes that could match that edge
-in the query, not local in the sense that would evaluate to different results
-for each Jane Campion film.
+This is the key to using Dgraph variables correctly: a variable is global. It
+evaluates to every node that matches the defining edge across the entire query.
+It does not re-evaluate per parent -- `JC_actor` yields the same UID list
+whether used inside a single Jane Campion film or elsewhere.
 
 We can also use query variables in another query block, both as the nodes the
 root filter matches and in internal filters.
@@ -24,8 +23,15 @@ Peter Jackson often appears in his own films, mostly in the background
 or just a glimpse, but he's there. The query shows all films that Peter Jackson
 has both directed and appeared in.
 
-Explaining Query:
+Explaining the query:
 
-The first block looks for any node that has "Peter" and "Jackson". Without Cascade, this query could return homonyms as "Sam Peter Jackson" among others. The secret of cascade is that when using "director.film" in the query body. It becomes a query parameter. That is, this query will only return some "Peter Jackson" who is a director. And in our database, there is only one Peter as director.
+The first block finds every node whose name contains both "Peter" and "Jackson".
+Without `@cascade`, this block could return homonyms such as "Sam Peter Jackson".
+Because the block also traverses `director.film`, `@cascade` drops any node that
+lacks that edge -- so only a "Peter Jackson" who directed at least one film
+survives. In our dataset, exactly one Peter Jackson is a director.
 
-In the second block we use the entities (in this case, only one Peter will return). We applied Cascade again, to guarantee constraints on the query. That is, we eliminate those nodes that Peter Jackson was not an actor, and the films to which he does not have the predicate "name@en".
+The second block reuses that result (a single UID). `@cascade` here enforces
+two additional constraints: Peter Jackson must appear as an actor on the film,
+and each film must have a `name@en` predicate. Any film that fails either
+constraint is excluded from the results.
