--- a/content/blocksvars/8.md
+++ b/content/blocksvars/8.md
@@ -14,11 +14,11 @@ contain `int` and `float` data.
 Find which is greater, the number of movies by Steven Spielberg or the average
 number of actors in movies directed by him.
 
-This query can be done in a single block, but you'll see here how values are
-available in other blocks if the corresponding UID's are available for the value
-map.
+This query can be done in a single block, but the example below shows how values
+are available in other blocks when the corresponding UIDs are present in the
+value map.
 
-Spoiler alert: {{% expandable %}}
+Solution: {{% expandable %}}
 
 ```
 {
@@ -40,6 +40,6 @@ Spoiler alert: {{% expandable %}}
 {{% /expandable %}}
 
 After you have the query working, try changing the second block to use the wrong
-UID's and see what happens. For example, change `avs` to query for a different
+UIDs and see what happens. For example, change `avs` to query for a different
 director instead of using `ID` - the definition of variable `ID` would also need
 to be removed, otherwise it would be defined but not used.
