--- a/content/blocksvars/9.md
+++ b/content/blocksvars/9.md
@@ -8,16 +8,15 @@ course = 5
 courseName = "Var Blocks"
 +++
 
-If the context provided by the UIDs of the block is correct, value variables can
-also be used in filtering and ordering.
+Value variables can also be used in filtering and ordering, provided the
+enclosing block supplies the correct UIDs.
 
-Here, `ID` will be the UID's of all directors of name Steven and `average` is a
-map from those UID's to the average for each director. The filtering, ordering
-and result for `var(average)` are evaluated in that context to obtain each
-value.
+Here, `ID` holds the UIDs of all directors named Steven, and `average` maps each
+of those UIDs to the director's average. Filtering, ordering, and the result of
+`val(average)` all evaluate against that UID context to produce each value.
 
 A value variable can be used in place of a UID variable, `uid(<value-variable>)`
-evaluates to the UID's in the map. For example, the `avs` query block could be
+evaluates to the UIDs in the map. For example, the `avs` query block could be
 written:
 
 ```
