--- a/content/search/1.md
+++ b/content/search/1.md
@@ -9,13 +9,12 @@ courseName = "Search"
 endpoint = "/alter"
 +++
 
-When Dgraph is searching for strings, dates, or other values based on a filter,
-it needs an index to make the search efficient. We've already seen examples of
-how to specify the indexes in a [schema mutation](../../moredata/1).
+Dgraph uses indexes to search strings, dates, and other values efficiently. You
+specify indexes in a [schema mutation](../../moredata/1).
 
-`int`, `float`, `geo` and `date` have default indexes, but `string` has options
-of what index types to choose. Multiple indexes can be built for the same
-`string` valued predicate.
+`int`, `float`, `geo`, and `date` have default indexes. `string` lets you choose
+from several index types, and you can build multiple indexes for the same
+`string` predicate.
 
 For `string` the following indexes are available
 
@@ -25,13 +24,12 @@ For `string` the following indexes are available
 - `fulltext` for full text search with `alloftext` and `anyoftext`
 - `trigram` for use with regular expressions
 
-Multiple indexes are specified as arguments to `@index`.
+Specify multiple indexes as arguments to `@index`.
 
 Apply the schema mutation to add the indexes to the movie data. It will take a
 few minutes for Dgraph to compute those indexes for all the movie data. Let the
 mutation run and move on once it's finished.
 
-You might find Docker stops your Dgraph process during the mutation. That might
-be a memory issue - increase the amount of memory Docker allows and then restart
-Dgraph, load the [initial schema and data](../../moredata/1), then apply this
-mutation.
+If Docker stops your Dgraph process during the mutation, increase Docker's
+memory allowance, restart Dgraph, reload the
+[initial schema and data](../../moredata/1), then apply this mutation again.
