--- a/content/search/2.md
+++ b/content/search/2.md
@@ -14,5 +14,5 @@ queries in the tour used these searches.
 
 Try both options and note the difference.
 
-The query makes no further constraints than requiring the found nodes to have a
-name matching the terms, so actors and directors are returned.
+The query requires only that a node's name match the terms, so it returns both
+actors and directors.
