docs: tighten filtering lesson prose and fix garbled sentence in basic/6

--- a/content/basic/6.md
+++ b/content/basic/6.md
@@ -10,12 +10,11 @@ courseName = "Basic"
 
 Functions filter nodes by examining their outgoing edges.
 
-The previous queries applied filters only at the root level. 
-Filters can also appear on any internal block in the query. 
-The syntax differs slightly between root-level and query internal filtering. Compare the syntax difference between the root 
-filter function (`func:`) in the query on the right the and the internal filter function applied with the `@filter` directive inside it. 
+The previous queries applied filters at the root level only. Filters can also
+appear inside any block. Compare the root filter function (`func:`) in the
+query on the right with the `@filter` directive applied inside it.
 
-Dgraph offers a variety of filtering functions, for example: 
+Dgraph offers several filtering functions:
 
 - `allofterms(edge_name, "term1 ... termN")`: matches nodes whose outgoing `string` edge `edge_name` contains all listed terms.
   
@@ -29,8 +28,8 @@ Dgraph offers a variety of filtering functions, for example:
   - `lt(edge_name, value)`: less than
 
 
-As well, functions such things as filtering using [regular expressions](https://docs.dgraph.io/dql/query/functions#regular-expressions), [full-text search](https://docs.dgraph.io/dql/query/functions#full-text-search), and [geospatial queries](https://docs.dgraph.io/dql/query/functions#geolocation). The [search section of this tutorial]({{< relref "search/1" >}}) covers these in depth.
+Dgraph also supports filtering with [regular expressions](https://docs.dgraph.io/dql/query/functions#regular-expressions), [full-text search](https://docs.dgraph.io/dql/query/functions#full-text-search), and [geospatial queries](https://docs.dgraph.io/dql/query/functions#geolocation). The [search section]({{< relref "search/1" >}}) covers these in depth.
 
-Most functions require an indexed predicate. Comparison functions (`eq`, `ge`, `gt`, `le`, `lt`) are the exception: they work inside `@filter` without an index, but still require one at root `func:`. Filtering on unindexed predicates can be slow for large datasets.
+Most functions require an indexed predicate. Comparison functions (`eq`, `ge`, `gt`, `le`, `lt`) work inside `@filter` without an index but still require one at root `func:`.
 
 The [schema lesson]({{< relref "schema/1" >}}) covers indexes in detail.
